testsuite/tests/typecheck/should_fail/T9318.stderr

T9318.hs:12:5: error:
    • Couldn't match type ‘Bool’ with ‘Char’
      Expected type: F Int
        Actual type: Char
    • In the pattern: 'x'
      In an equation for ‘bar’: bar 'x' = ()
